<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">汇车无忧</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="user_login">账号登录</string>
	<string name="account">账号</string>
	<string name="password">密码</string>
	<string name="security_code">验证码</string>
	<string name="password_input_tips">请输入密码</string>
	<string name="account_input_tips">请输入卡号/手机号</string>
	<string name="phone_input_tips">请输入11位手机号</string>
	<string name="login_now">立即登录</string>
	<string name="forget_passwd">忘记密码?</string>
	<string name="third_party_login">第三方账号登录</string>
	<string name="wechat">微信</string>
	<string name="nearby_main">首页</string>
	<string name="scoremall_main">积分商城</string>
	<string name="shoppingcart_main">扫一扫</string>
	<string name="mine_main">我的</string>
	<string name="phone_number">手机号</string>
	<string name="new_passwd_input">输入新密码</string>
	<string name="confirm_passwd_input">确认新密码</string>
	<string name="security_code_input_tips">请输入验证码</string>
	<string name="get_security_code">获取验证码</string>
	<string name="new_passwd_input_tips">请输入新密码</string>
	<string name="confirm_passwd_input_tips">请输入新密码</string>
	<string name="change_passwd">修改密码</string>
	<string name="business_detail">商家详情</string>
	<string name="phone_book">预约</string>
	<string name="complaint">报错</string>
	<string name="navigation">导航</string>
	<string name="select_add">全选</string>
	<string name="delete">删除</string>
	<string name="clean_shoppingcart">清空购物车</string>
	<string name="cancel">取消</string>
	<string name="confirm">确定</string>
	<string name="persional">个人中心</string>
	<string name="msg_default_status">扫一扫验证二维码，即可兑换</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

	<string name="listview_header_hint_normal">下拉刷新</string>
	<string name="listview_header_hint_release">释放立即刷新</string>
	<string name="listview_loading">正在加载...</string>
	<string name="nomore_loading">没有了</string>
	<string name="refreshing">正在刷新...</string>
	<string name="refresh_done">刷新完成</string>
	<string name="listview_header_last_time">上次更新时间：</string>

	<!--footer-->
	<string name="list_footer_loading">正在加载中…</string>
	<string name="list_footer_network_error">点击重新加载</string>
	<string name="list_footer_end">已全部加载完</string>

	<string name="text_just">刚刚</string>
	<string name="text_seconds_ago">秒前</string>
	<string name="text_minute_ago">分钟前</string>
	<string name="text_hour_ago">小时前</string>
	<string name="text_day_ago">天前</string>
	<string name="text_month_ago">月前</string>
	<string name="text_year_ago">年前</string>



</resources>
