<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include layout="@layout/include_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 手机号 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/phone_number"
                    android:textColor="@color/text_color_black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_phoneInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:background="@color/transparent"
                    android:hint="@string/phone_input_tips"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:padding="5dp"
                    android:textColorHint="@color/text_color_hint"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_bg" />
            <!-- 验证码 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/security_code"
                    android:textColor="@color/text_color_black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/et_securityCodeInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@color/transparent"
                        android:hint="@string/security_code_input_tips"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:textColorHint="@color/text_color_hint"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btn_sendSecurity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="3"
                        android:background="@drawable/bg_security_button_enable"
                        android:text="@string/get_security_code"
                        android:textColor="@color/bule_title"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_bg" />
            <!-- 输入新密码 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/new_passwd_input"
                    android:textColor="@color/text_color_black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_newPasswdInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:background="@color/transparent"
                    android:hint="@string/new_passwd_input_tips"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:padding="5dp"
                    android:textColorHint="@color/text_color_hint"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_bg" />
            <!-- 确认新密码 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/confirm_passwd_input"
                    android:textColor="@color/text_color_black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_confirmPasswdInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:background="@color/transparent"
                    android:hint="@string/confirm_passwd_input_tips"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:padding="5dp"
                    android:textColorHint="@color/text_color_hint"
                    android:textSize="16sp" />
            </LinearLayout>
            <!-- 修改密码 -->

            <Button
                android:id="@+id/btn_changePasswd"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/selector_login_button"
                android:enabled="false"
                android:text="@string/change_passwd"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>