<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/frameLayout_MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RadioGroup
        android:id="@+id/radioGroup_MainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="2dp"
        android:background="@drawable/dibu_01"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_nearBy_MainActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:button="@null"
            android:checked="false"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/selector_radiobutton_nearby"
            android:gravity="center_horizontal"
            android:text="@string/nearby_main"
            android:textColor="@color/selector_radiobutton__textcolor"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/radioButton_scoreMall_MainActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:button="@null"
            android:checked="false"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/selector_radiobutton_shopmall"
            android:gravity="center_horizontal"
            android:text="@string/scoremall_main"
            android:textColor="@color/selector_radiobutton__textcolor"
            android:textSize="13sp" />
        <!-- 优 -->

        <ImageView
            android:id="@+id/iv_uu_Fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:src="@drawable/sou_00" />

        <RadioButton
            android:id="@+id/radioButton_shoppingCart_MainActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:button="@null"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/selector_radiobutton_shoppingcart"
            android:gravity="center_horizontal"
            android:text="@string/shoppingcart_main"
            android:textColor="@color/selector_radiobutton__textcolor"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/radioButton_mine_MainActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:button="@null"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/selector_radiobutton_mine"
            android:gravity="center_horizontal"
            android:text="@string/mine_main"
            android:textColor="@color/selector_radiobutton__textcolor"
            android:textSize="13sp" />
    </RadioGroup>

</RelativeLayout>