<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/account"
                    android:textColor="@color/text_color_black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_accountInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:background="@color/transparent"
                    android:hint="@string/account_input_tips"
                    android:inputType="number"
                    android:padding="5dp"
                    android:textColorHint="@color/text_color_hint"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divide_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/password"
                    android:textColor="@color/text_color_black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_passwordInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:background="@color/transparent"
                    android:hint="@string/password_input_tips"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textColorHint="@color/text_color_hint"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divide_color" />

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_login_button"
                    android:enabled="false"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/login_now"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/forget"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_gravity="end"
                    android:text="忘记密码"
                    android:textSize="16sp"
                    android:textColor="#F7A168"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:visibility="gone"
                    android:id="@+id/tv_forgetPasswd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:text="@string/forget_passwd"
                    android:textColor="@color/text_color_black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/grey_bg" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/third_party_login"
                    android:textColor="@color/text_color_black_light"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/grey_bg" />
            </LinearLayout>
            <!--微信登录-->
            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:id="@+id/ll_wechat_login"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_green_button"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/weixbiaoz" />

                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/tv_wechat_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:padding="12dp"
                    android:text="一键登录"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_22"
                android:layout_marginTop="230dp"
                android:text="我还没注册"
                android:gravity="center"
                android:textColor="#BDBDBD"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>





    </ScrollView>

</LinearLayout>